# GeneralPolygonClipper

./: CHEATSHEET.md  CMakeLists.txt  LICENSE  README.md  VERSIONS.TXT  gpc.c  gpc.h
